# ChangeLog for dev-ruby/ruby-serialport
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-serialport/Attic/ChangeLog,v 1.11 2010/01/24 00:02:35 flameeyes Exp $

  24 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  ruby-serialport-1.0.1.ebuild:
  Cleanup, set the fakegem name, so that the spec file is generated
  correctly, also add ruby19 support and install also the .rb glue file.

*ruby-serialport-1.0.1 (23 Jan 2010)

  23 Jan 2010; Hans de Graaff <graaff@gentoo.org>
  +ruby-serialport-1.0.1.ebuild:
  Version bump. Convert to ruby-fakegem.

*ruby-serialport-0.7.0 (24 Aug 2009)

  24 Aug 2009; Hans de Graaff <graaff@gentoo.org>
  +ruby-serialport-0.7.0.ebuild:
  Version bump.

  08 Feb 2009; Alex Legler <a3li@gentoo.org> ruby-serialport-0.6.ebuild:
  Removing ruby16 and ruby19 from USE_RUBY and depending explicitly on
  ruby18

  20 Oct 2006; Aron Griffis <agriffis@gentoo.org>
  ruby-serialport-0.6.ebuild:
  Mark 0.6 stable on ia64

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org>
  ruby-serialport-0.6.ebuild:
  Mark 0.6 ~ia64

  15 Mar 2006; Caleb Tennis <caleb@gentoo.org> ruby-serialport-0.6.ebuild:
  Change einstall to make DESTDIR=D install

  17 Apr 2004; David Holm <dholm@gentoo.org> ruby-serialport-0.6.ebuild:
  Added to ~ppc.

  11 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> ruby-serialport-0.6.ebuild:
  Marked as stable. virtual/ruby fix

*ruby-serialport-0.6 (03 Mar 2004)

  03 Mar 2004; Mamoru KOMACHI <usata@gentoo.org> metadata.xml,
  ruby-serialport-0.6.ebuild:
  Initial import. Ebuild submitted by Henry Jen <henryjen@ztune.net>,
  closing bug #42316
