@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/ruby-serialport
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-serialport/Attic/ChangeLog,v 1.11 2010/01/24 00:02:35 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-serialport/Attic/ChangeLog,v 1.12 2010/04/27 05:51:00 graaff Exp $
+
+*ruby-serialport-1.0.3 (27 Apr 2010)
+
+  27 Apr 2010; Hans de Graaff <graaff@gentoo.org>
+  +ruby-serialport-1.0.3.ebuild:
+  Version bump: bug fixes.
 
   24 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
   ruby-serialport-1.0.1.ebuild:
